--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Armin's Website</title>
   </head>
@@ -77,15 +78,15 @@
       </section>
 
       <section class="light">
-        <h2>(Bounus) Puzzle:</h2>
+        <h2>(Bonus) Puzzle:</h2>
         <p>
           I've chosen a number between 1, 2 and 3. You can ask me one question, and I'll answer with either yes, no or IDK. What should you ask me to determine my chosen number?<br>
-          (The answer's not say yes if it's 1, no if 2, IDK if 3. That's cheating.)
+          (The answer's not say "yes" if it's 1, "no" if 2, and "IDK" if 3. That's lame.)
         </p>
       </section>
 
       <section class="light">
-        <h2>(Bounus Bonus) Chess.com Daily Puzzle:</h2>
+        <h2>(Bonus Bonus) Chess.com Daily Puzzle:</h2>
       <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
       </section>
 
@@ -97,7 +98,7 @@
 
     </main>
     
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
 
 
 
