--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <h2>📜 Bio</h2>
         <p>
-          I am a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of Professor Ramani Duraiswami. My research interests lie in the exciting domains of scientific machine learning and differentiable programming. 
+          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of Prof. Ramani Duraiswami. My research interests lie in the exciting domains of scientific machine learning and differentiable programming. 
         </p>
       </section>
 
@@ -48,7 +48,7 @@
           Outstanding graduate research assistant awrad for AY 2023-2024.
         </p>
         <p>
-          Ranked 21st in Iran’s National University Entrance Exam (Konkour) in 2016.
+          Ranked 21st in Iran's National University Entrance Exam (Konkour) in 2016.
         </p>
 
       </section>
@@ -65,7 +65,7 @@
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
-          Armin Gerami, Bahara Asgari; ASPLOS'25
+          Armin Gerami, Bahar Asgari; ASPLOS'25
         </p>
 
         <h2>🚀 Patents</h2>
