--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header>
         <h1>Armin Gerami</h1>
         <h6>agerami@umd.edu</h6>
-        <p>🔥 Welcome to my website!</p>
+        <p>🔥 Welcome to my webpage!</p>
       </header>
 
 
