--- a/index.html
+++ b/index.html
@@ -57,18 +57,21 @@
         <h2>🔬 Research</h2>
         <p>
           <i>Reduced Memory Attention mechanisms Based on Kernel Separation</i><br>
-          Armin Gerami, Ryan Synk, Ruolan Leslie Famularo, Ramani Duraiswami; Submitted
+          Armin Gerami, Ryan Synk, Ruolan Leslie Famularo, Ramani Duraiswami; Submitted<br>
+          <b>Summary:</b> Kernel Separation is a promising approach for calculating the attention in transformers with linear time complexity. However, they suffer from a high memory footprint. In this work, we propose a solution to address this high memory footprint.
         </p>
         <p>
-          <i>EFFICIENT SPATIAL AUDIO RENDERING VIA DIFFERENTIABLE FIR TO IIR ESTIMATION</i><br>
-          Armin Gerami, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted
+          <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
+          Armin Gerami, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted<br>
+          <b>Summary:</b> We introduce a convex optimization for estimating FIR filters with an IIR filter, and achieve $2\times$ speedup with an accuracy of $O(e^{-4})$ through differential programming.
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
-          Armin Gerami, Bahar Asgari; ASPLOS'25
+          Armin Gerami, Bahar Asgari; ASPLOS'25<br>
+          <b>Summary:</b> A software/hardware codesign to accelerate sparse matrix-vector multiplication. The harware enables resource sharing while the graph-edge-coloring schedules the input stream to prevent collisions.
         </p>
 
-        <h2>🚀 Patents</h2>
+        <h2>🚀 Invention Disclosures</h2>
         <p>
           Differentiable FIR To IIR Filter Estimation
         </p>
@@ -91,8 +94,11 @@
       </section>
 
       <blockquote>
-        <p>That's all folks!
-        </p>
+        <a href="https://linkedin.com/your/profile/url" class="social-icon si-rounded si-small si-linkedin">
+  <i class="icon-linkedin"></i>
+</a>
+<!--         <p>That's all folks!
+        </p> -->
       </blockquote>
 
 
