--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       </section>
 
       <blockquote>
-        <a href="https://linkedin.com/your/profile/url" class="social-icon si-rounded si-small si-linkedin">
-  <i class="icon-linkedin"></i>
+        <a href="https://www.linkedin.com/in/armingerami/" class="social-icon si-rounded si-small si-linkedin">
+  <i style="font-size:24px" class="fa">&#xf08c;</i>
 </a>
 <!--         <p>That's all folks!
         </p> -->
