--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 <!--         <p>That's all folks!
         </p> -->
       </blockquote>
-
+<a href="https://www.linkedin.com/in/armingerami/" class="social-icon si-rounded si-small si-linkedin">
+  <i style="font-size:24px" class="fa">&#xf08c;</i>
+</a>
 
     </main>
     
