--- a/index.html
+++ b/index.html
@@ -94,14 +94,11 @@
       </section>
 
       <blockquote>
-        <a href="https://www.linkedin.com/in/armingerami/" class="social-icon si-rounded si-small si-linkedin">
-  <i style="font-size:24px" class="fa">&#xf08c;</i>
-</a>
+        <a href="https://www.linkedin.com/in/armingerami/"><img src="favicon.svg" alt="Logo"></a>
 <!--         <p>That's all folks!
         </p> -->
       </blockquote>
-<a href="https://www.linkedin.com/in/armingerami/" class="social-icon si-rounded si-small si-linkedin">
-  <i style="font-size:24px" class="fa">&#xf08c;</i>
+<a href="https://www.linkedin.com/in/armingerami/"><img src="favicon.svg" alt="Logo"></a>
 </a>
 
     </main>
