--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       </section>
 
       <blockquote>
-        <a href="https://www.linkedin.com/in/armingerami/"><img src="favicon.svg" alt="Logo"></a>
+        <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
 <!--         <p>That's all folks!
         </p> -->
       </blockquote>
-<a href="https://www.linkedin.com/in/armingerami/"><img src="favicon.svg" alt="Logo"></a>
+<a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
 </a>
 
     </main>
