--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
       <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
       </section>
 
-      <blockquote>
+<!--       <blockquote>
         <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
-<!--         <p>That's all folks!
-        </p> -->
-      </blockquote>
-<a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
-</a>
+      </blockquote> -->
+      
+<p><a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
+</a> | <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
+</a> | <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
+</a></p>
 
     </main>
     
