--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
 <!--       <blockquote>
         <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
       </blockquote> -->
-      
-<p><a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
-</a> | <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
-</a> | <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
-</a></p>
 
+<section_trans>
+<p><a href="https://www.linkedin.com/in/armingerami/"><img src="./linkedin.svg" alt="Logo"></a>
+</a> | <a href="https://www.linkedin.com/in/armingerami/"><img src="./github.svg" alt="Logo"></a>
+</a> | <a href="agerami@umd.edu"><img src="./email.svg" alt="Logo"></a>
+</a></p>
+</section_trans>
     </main>
     
     <script type="module" src="./main.js"></script>
