--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       </blockquote> -->
 
 <section_trans>
-<p><a href="https://www.linkedin.com/in/armingerami/"><img src="./linkedin.png" alt="Logo"></a>
-</a> | <a href="https://github.com/armingerami"><img src="./github.png" alt="Logo"></a>
-</a> | <a href="agerami@umd.edu"><img src="./email.png" alt="Logo"></a>
+<p><a href="https://www.linkedin.com/in/armingerami/"><img src="./linkedin.png" alt="Logo" width="50" height="50"></a>
+</a> | <a href="https://github.com/armingerami"><img src="./github.png" alt="Logo" width="64" height="64"></a>
+</a> | <a href="agerami@umd.edu"><img src="./email.png" alt="Logo" width="24" height="24"></a>
 </a></p>
 </section_trans>
     </main>
