--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 
 <section_trans>
 <p><a href="https://www.linkedin.com/in/armingerami/"><img src="./linkedin.png" alt="Logo" width="100" height="100"></a>
-</a> | <a href="https://github.com/armingerami"><img src="./github.png" alt="Logo" width="100" height="100"></a>
-</a> | <a href="agerami@umd.edu"><img src="./email.png" alt="Logo" width="120" height="100"></a>
-</a></p>
+ <a href="https://github.com/armingerami"><img src="./github.png" alt="Logo" width="100" height="100"></a>
+ <a href="agerami@umd.edu"><img src="./email.png" alt="Logo" width="120" height="100"></a></p>
 </section_trans>
     </main>
     
