--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <h2>🔬 Research</h2>
         <p>
           <i>Reduced Memory Attention mechanisms Based on Kernel Separation</i><br>
-          Armin Gerami, Ryan Synk, Ruolan Leslie Famularo, Ramani Duraiswami; Submitted<br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Ryan Synk, Ruolan Leslie Famularo, Ramani Duraiswami; Submitted<br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Kernel Separation is a promising approach for calculating the attention in transformers with linear time complexity. However, they suffer from a high memory footprint. In this work, we propose a solution to address this high memory footprint.
         </p>
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
-          Armin Gerami, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted<br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted<br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a convex optimization for estimating FIR filters with an IIR filter, and achieve $2\times$ speedup with an accuracy of $O(e^{-4})$ through differential programming.
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
-          Armin Gerami, Bahar Asgari; ASPLOS'25<br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Bahar Asgari; ASPLOS'25<br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> A software/hardware codesign to accelerate sparse matrix-vector multiplication. The harware enables resource sharing while the graph-edge-coloring schedules the input stream to prevent collisions.
         </p>
 
