--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
         <h2>📜 Bio</h2>
         <p>
-          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of Prof. Ramani Duraiswami. My research interests lie in the exciting domains of scientific machine learning, differentiable programming and high performance computing. Currently, I'm working on new methods of solving PDEs using neural networks. 
+          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of <a href="https://www.cs.umd.edu/people/rduraisw"><u>Prof. Ramani Duraiswami</u></a>. My research interests lie in the exciting domains of scientific machine learning, differentiable programming and high performance computing. Currently, I'm working on new methods of solving PDEs using neural networks. 
         </p>
       </section>
 
