--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section_trans>
 <p><a href="https://www.linkedin.com/in/armingerami/"><img src="./linkedin.png" alt="Logo" width="80" height="80"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
  <a href="https://github.com/armingerami"><img src="./github.png" alt="Logo" width="80" height="80"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
- <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=XKrFIXMAAAAJ"><img src="./scholar.png" alt="Logo" width="80" height="80"></a></p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+ <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=XKrFIXMAAAAJ"><img src="./scholar.png" alt="Logo" width="100" height="100"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
  <a href="agerami@umd.edu"><img src="./email.png" alt="Logo" width="100" height="80"></a></p>
 </section_trans>
     </main>
