--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
           <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted<br>
-          <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a convex optimization for estimating FIR filters with an IIR filter, and achieve $2\times$ speedup with an accuracy of $O(e^{-4})$ through differential programming.
+          <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a convex optimization for estimating FIR filters with an IIR filter, and achieve 2× speedup with an accuracy of %0.01 through differential programming.
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
