--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <h3><span id="puzzleText" /></h3>
     </div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
     var request = new XMLHttpRequest();
     request.open('GET', 'https://chesspuzzle.net/Daily/Api', true);
     request.onload = function () {
@@ -109,9 +109,9 @@
     }
     };
     request.send();
-    </script>
-    <!--  <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
-      </section> -->
+    </script> -->
+    <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
+      </section>
 
 <!--       <blockquote>
         <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
