--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     };
     request.send();
     </script> -->
-    <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
-      </section>
+    <!-- <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
+      </section> -->
 
 <!--       <blockquote>
         <a href="https://www.linkedin.com/in/armingerami/"><img src="./favicon.svg" alt="Logo"></a>
