--- a/index.html
+++ b/index.html
@@ -90,11 +90,7 @@
 
       <section class="light">
         <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
-            <div>
-    <a id="puzzleLink" href="https://chesspuzzle.net/Daily">
-    <img id="puzzleImage" alt="Daily Chess Puzzle" />
-    </a><br />
-    <h3><span id="puzzleText" /></h3>
+<iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
     </div>
 
     <!-- <script type="text/javascript">
