--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
       <section class="light">
         <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
-<iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
-    </div>
+<iframe id="12257825" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=12257825"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12257825"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+37}px`)});</script>
+      </div>
 
     <!-- <script type="text/javascript">
     var request = new XMLHttpRequest();
