--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <section class="left">
         <h2>🔬 Research</h2>
         <p>
-          <i>Reduced Memory Attention Mechanism in Transfomers Based on Kernel Separation</i><br>
-          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Ryan Synk, Ruolan Leslie Famularo, Ramani Duraiswami; Submitted<br>
-          <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Kernel Separation is a promising approach for calculating the attention in transformers with linear time complexity. However, they suffer from a high memory footprint. In this work, we propose a solution to address this high memory footprint.
+          <i>Towards Making Linear Attention Usable</i><br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Ryan Synk, Monte Hoover, Ramani Duraiswami; Submitted<br>
+          <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Linear attention (Kernel Separation) is a promising approach for calculating the attention in transformers with linear time complexity. However, they suffer from a high memory footprint. In this work, we propose a solution to address this high memory footprint.
         </p>
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
