--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <section>
         <h2>📜 Bio</h2>
         <p>
-          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of <a href="https://www.cs.umd.edu/people/rduraisw"><u>Prof. Ramani Duraiswami</u></a>. My research interests lie in the exciting domains of scientific machine learning, differentiable programming and high performance computing. Currently, I'm working on new methods of solving PDEs using neural networks. 
+          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of <a href="https://www.cs.umd.edu/people/rduraisw"><u>Prof. Ramani Duraiswami</u></a>. My research interests lie in the exciting domains of differentiable programming and high performance computing. Currently, I'm working on  improving the computational efficiency of transformers,
+and neural operator learning. 
         </p>
       </section>
 
@@ -56,13 +57,13 @@
       <section class="left">
         <h2>🔬 Research</h2>
         <p>
-          <i>Towards Making Linear Attention Usable</i><br>
-          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Ryan Synk, Monte Hoover, Ramani Duraiswami; Submitted<br>
+          <i>Towards Making Linear Attention Practical</i><br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Ryan Synk, Monte Hoover, Ramani Duraiswami; Preprint<br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Linear attention (Kernel Separation) is a promising approach for calculating the attention in transformers with linear time complexity. However, they suffer from a high memory footprint. In this work, we propose a solution to address this high memory footprint.
         </p>
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
-          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; Submitted<br>
+          <span style="color: rgb(121, 55, 179);">Armin Gerami</span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; ICASSP'25<br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a convex optimization for estimating FIR filters with an IIR filter, and achieve 2× speedup with an accuracy of %0.01 through differential programming.
         </p>
         <p>
