--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ and matrix multiplication in neural networks.
 
       <section class="light">
         <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
-<iframe id="12257825" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=12257825"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12257825"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+37}px`)});</script>
+<iframe id="12257825" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/daily"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12257825"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+37}px`)});</script>
       </div>
 
     <!-- <script type="text/javascript">
@@ -122,7 +122,7 @@ and matrix multiplication in neural networks.
     };
     request.send();
     </script> -->
-    <!-- <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
+    <!-- <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/emboard?id=12257825" frameborder="0"></iframe>
       </section> -->
 
 <!--       <blockquote>
@@ -157,3 +157,4 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
