--- a/index.html
+++ b/index.html
@@ -61,32 +61,32 @@ and matrix multiplication in neural networks.
         <h2>🔬 Research</h2>
         <p>
           <i>Auditing Algorithmic Bias in Transformer-Based Stock Trading</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Ramani Duraiswami</span>; Neurips'25<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>Neurips'25</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> This study introduces a metric based on Partial Information Decomposition (PID) to audit how transformer models used in finance rely on volatile data and are affected by price movement frequency. The analysis reveals that the model entirely disregards data volatility and shows a significant bias toward assets with lower-frequency price movements.
         </p>
         <p>
           <i>Optimized Linear Attention GPU Kernel Implementation</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Ramani Duraiswami</span>; TMLR'25<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>TMLR'25</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Linear attention (Kernel Separation) is a promising approach for calculating the attention in transformers with linear time complexity. However, it introduces a significant data movement overhead. We present a CUDA library that achieves a 3.3× speedup and 3.6× reduction in memory consumption for linear attention implementation compared to the state-of-the-art.
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Bahar Asgari</span>; ASPLOS'25<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bahar Asgari; <b>ASPLOS'25</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> A software/hardware codesign to accelerate sparse matrix-vector multiplication. The harware enables resource sharing while the graph-edge-coloring schedules the input stream to prevent collisions.
         </p>
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami</span>; ICASSP'25<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; <b>ICASSP'25</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a novel convex optimization algorithm for estimating FIR filters with an IIR filter, and achieve 2× speedup with an accuracy of %0.01 through differential programming.
         </p>
         <p>
           <i>Towards Efficient Implementation of Differentiable Sparse Matrix Multiplication</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Ramani Duraiswami</span>; Preprint<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>Preprint</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b>  Sparse Matrix-Matrix Multiplication (SpMM) is a crucial operation for improving the efficiency of large deep neural networks, but creating a high-performance, differentiable version compatible with gradient-based training is challenging. This paper introduces a novel differentiable SpMM implementation that achieves a 2.6x speedup over the state-of-the-art, enabling more efficient and scalable training for sparse neural network models.
         </p>
         <p>
           <i>Room Impulse Response Synthesis via Differentiable Feedback Delay Networks</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span><span style="color: rgb(128, 128, 128);">, Ramani Duraiswami</span>; Preprint<br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>Preprint</b><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b>  We introduce a computationally efficient and tunable feedback-delay-network (FDN) architecture for real-time room-impulse-response (RIR) rendering, addressing the computational and latency challenges inherent in traditional convolution and Fourier transform-based methods.
         </p>
         
@@ -182,6 +182,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
