--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ and matrix multiplication in neural networks.
             allowtransparency="true" 
             frameborder="0" 
             style="width:100%; border:none;" 
-            src="//www.chess.com/daily_puzzle/embed">
+            src="https://www.chess.com/daily_puzzle/embed"
+</iframe>
     </iframe>
 
     <script>
@@ -182,6 +183,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
