--- a/index.html
+++ b/index.html
@@ -115,25 +115,9 @@ and matrix multiplication in neural networks.
       </section>
 
 <section class="light">
-    <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
-    
-    <iframe id="12257825" 
-            allowtransparency="true" 
-            frameborder="0" 
-            style="width:100%; border:none;" 
-            src="https://www.chess.com/daily_puzzle/embed"
-</iframe>
-    </iframe>
-
-    <script>
-        window.addEventListener("message", e => {
-            if (e.data && e.data.id === "12257825" && document.getElementById(e.data.id)) {
-                const iframe = document.getElementById(e.data.id);
-                iframe.style.height = `${e.data.frameHeight + 37}px`;
-            }
-        });
-    </script>
-</section>
+        <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
+<iframe id="12257825" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=12257825"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12257825"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+37}px`)});</script>
+      </div>
 
     <!-- <script type="text/javascript">
     var request = new XMLHttpRequest();
@@ -183,6 +167,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
