--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ and matrix multiplication in neural networks.
       </section>
 
 <section class="light">
-        <h2>(Bonus Bonus) Daily Chess Puzzle:</h2>
+        <h2>(Bonus Bonus) Chess Puzzle:</h2>
 <iframe id="12257825" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="https://www.chess.com/emboard?id=12257825"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12257825"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+37}px`)});</script>
       </div>
 
@@ -167,6 +167,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
