--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@ and matrix multiplication in neural networks.
         <h2>🔬 Research</h2>
         <p>
           <i>Auditing Algorithmic Bias in Transformer-Based Stock Trading</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>Neurips'25</b><br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <span style="color: rgb(217, 53, 26);"><b>Neurips'25</b></span><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> This study introduces a metric based on Partial Information Decomposition (PID) to audit how transformer models used in finance rely on volatile data and are affected by price movement frequency. The analysis reveals that the model entirely disregards data volatility and shows a significant bias toward assets with lower-frequency price movements.
         </p>
         <p>
           <i>Optimized Linear Attention GPU Kernel Implementation</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <b>TMLR'25</b><br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Ramani Duraiswami; <span style="color: rgb(217, 53, 26);"><b>TMLR'25</b></span><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> Linear attention (Kernel Separation) is a promising approach for calculating the attention in transformers with linear time complexity. However, it introduces a significant data movement overhead. We present a CUDA library that achieves a 3.3× speedup and 3.6× reduction in memory consumption for linear attention implementation compared to the state-of-the-art.
         </p>
         <p>
           <i>GUST: Graph Edge-Coloring Utilization for Accelerating Sparse Matrix Vector Multiplication</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bahar Asgari; <b>ASPLOS'25</b><br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bahar Asgari; <span style="color: rgb(217, 53, 26);"><b>ASPLOS'25</b></span><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> A software/hardware codesign to accelerate sparse matrix-vector multiplication. The harware enables resource sharing while the graph-edge-coloring schedules the input stream to prevent collisions.
         </p>
         <p>
           <i>Efficient Spatial Audio Rendering Via Differentiable FIR To IIR Estimation</i><br>
-          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; <b>ICASSP'25</b><br>
+          <span style="color: rgb(121, 55, 179);"><b>Armin Gerami</b></span>, Bowen Zhi, Dmitry N. Zotkin, Ramani Duraiswami; <span style="color: rgb(217, 53, 26);"><b>ICASSP'25</b></span><br>
           <b><span style="color: rgb(90, 117, 161);">Summary</span>:</b> We introduce a novel convex optimization algorithm for estimating FIR filters with an IIR filter, and achieve 2× speedup with an accuracy of %0.01 through differential programming.
         </p>
         <p>
@@ -166,6 +166,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
