--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <section>
         <h2>📜 Bio</h2>
         <p>
-          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of <a href="https://www.cs.umd.edu/people/rduraisw"><u>Prof. Ramani Duraiswami</u></a>. My research interests lie in the domains of differentiable programming, high performance computing, and signal processing. Currently, I'm working on improving the computational efficiency of transformers,
-and matrix multiplication in neural networks. 
+          I'm a Computer Science Ph.D. candidate at the University of Maryland, working under the guidance of <span style="color: rgb(211,211,211);"><a href="https://www.cs.umd.edu/people/rduraisw"><u>Prof. Ramani Duraiswami</u></a></span>. My research interests lie in the domains of high performane computing, deep learning, and differentiable programming. Currently, I'm working on improving the computational efficiency of Transformers, Linear layres in neural networks, and Spatial Audio Rendering. 
         </p>
       </section>
 
@@ -166,6 +165,7 @@ and matrix multiplication in neural networks.
 
   </body>
 </html>
+
 
 
 
