--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section class="light">
         <h2>(Bonus) Puzzle:</h2>
         <p>
-          I've chosen a number between 1, 2 and 3. You can ask me one question, and I'll answer with either yes, no or IDK. What should you ask me to determine my chosen number?<br>
+          You have a rope that is 150 feet long. You can tie it in different ways and can also cut it. You are on a cliff that is 200 feet tall. 100 feet from the top is a ledge. There are rings to tie the rope to at the top and at the ledge. How can you get down?<br>
         </p>
       </section>
 
@@ -165,6 +165,7 @@
 
   </body>
 </html>
+
 
 
 
